parte de manejo de los datos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,16 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
 }
+//Argumentos
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
-
-
+//obtener xml desde codigo
 android.buildFeatures.viewBinding true
 
 android {
@@ -49,8 +55,23 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
+    implementation 'androidx.wear.tiles:tiles-material:1.1.0'
+    implementation 'com.google.firebase:firebase-inappmessaging:20.2.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    //Firebase -firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+
+    //firebase storage
+    implementation'com.google.firebase:firebase-storage-ktx'
+
+    implementation'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor'com.github.bumptech.glide:compiler:4.13.0'
 }
