--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,13 +65,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    //Firebase -firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx'
 
 
     //firebase storage
-    implementation'com.google.firebase:firebase-storage-ktx'
-
-    implementation'com.github.bumptech.glide:glide:4.13.0'
-    annotationProcessor'com.github.bumptech.glide:compiler:4.13.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
 }
