--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,9 +68,9 @@ dependencies {
 
 
     //exprecion DAD
-    annotationProcessor 'androidx.room:room-compiler:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
+    //annotationProcessor 'androidx.room:room-compiler:2.4.3'
+   // kapt 'androidx.room:room-compiler:2.4.3'
+    //implementation 'androidx.room:room-ktx:2.4.3'
 
 
     //Firebase -firestore
