--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,14 @@ dependencies {
 
 
 
-    //firebase storage
+    //exprecion DAD
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
+
+    //firebase storage
+    implementation'com.google.firebase:firebase-storage-ktx'
+
+    implementation'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor'com.github.bumptech.glide:compiler:4.13.0'
 }
